- wxHashTable::Next: use wxHashTable::Node* or
                     wxHashTable::compatibility_iterator to store the return
                     value
- wxWave class; use wxSound instead
- The wxHIDE_READONLY flag for wxFileDialog was not implemented
  and has now been removed
- wxTaskBarIcon::OnXXX() virtual methods: use events instead


OTHER CHANGES
=============

2.5.3
-----

All:

- number of fixes to wxPluginManager (Rick Brice, Hans Van Leemputten)
- fixed memory leak in wxURL when using a proxy (Steven Van Ingelgem)
- fixed bug in wxDateTime::Set(jdn) when DST was in effect
- fixed fatal bug in wxString when wxUSE_STL==1 (Kurt Granroth)
- support msgids in charsets other than C and languages other than English
  (based on patch by Stefan Kowski)
- added wxMicroSleep() and wxMilliSleep() replacing deprecated wxUsleep()
- basic UDP sockets support (Lenny Maiorani)
- fixed wxDateTime::GetWeekDayName() for some dates (Daniel Kaps)

All (GUI):

- added wxWindow::MoveBefore/AfterInTabOrder() to change tab navigation order
- added wxTaskBarIcon::CreatePopupMenu which is now recommended way
  of showing popup menu; calling wxTaskBarIcon::PopupMenu directly
  is discouraged
- added ..._CMD_...(id) variants for wxGrid event table entry macros
- added wxWindow::Navigate for programmatic navigation to the next control.
- wxTextCtrl::OnChar now inserts a tab character if wxTE_PROCESS_TAB is set
- added wxKeyEvent::GetUnicodeKey()
- added wxKeyEvent::CmdDown() and wxMouseEvent::CmdDown()
- implemented wxListCtrl::FindItem() for non-MSW (Robin Stoll)
- added status bar fields styles support (Tim Kosse)
- added samples/splash

Unix:

- wxTaskBarIcon now supports freedesktop.org System Tray protocol
- security fixes to wxSingleInstanceChecker
- wx-config script was modified to allow choosing from multiple installed
  builds of wxWidgets and to return flags/libs for selected libraries only
- wx-config has new --version-full option

wxGTK:
